# ForcuanTeller

./: .gitignore  Makefile  README.md  pyproject.toml
forcuanteller/config/: config.yaml
forcuanteller/main/: loader.py  main.py  reporter.py  sender.py  transformer.py
forcuanteller/main/indicators/: base.py  bollingerband.py  indicator.py  macd.py  rsi.py
forcuanteller/main/utils/: config.py  gmail.py  logger.py  paths.py  runner.py  schedule.py  ticker.py  timedate.py
forcuanteller/notebook/: 1-package-test.ipynb  template.ipynb
